--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banner do Agrinho </title>
+    <title> Trabalho: Agrinho</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ <section class="conteudo-princopal">
+    <h2 class="titulo-principal"> Da Terra ao Mercado</h2> <span></span>
+    <div class="botoes">
+        <button class="botao ativo"> Início de tudo</button>
+        <button class="botao"> Comercialização</button>
+        <button class="botao"> Chegada ao mercado e na nossa mesa!</button>
+    </div>
+
+  
+ </section>
+ <script src="main.js"> </script>
     
 </body>
 </html>
